--- a/v3/WebPrograming2_Final-Project/package.json
+++ b/v3/WebPrograming2_Final-Project/package.json
@@ -17,9 +17,10 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.2",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
     "jquery": "^3.6.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
@@ -27,6 +28,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "prettier": "^2.3.0",
+    "request": "^2.88.2",
     "sequelize": "^6.6.2"
   }
 }
