--- a/v3/WebPrograming2_Final-Project/package.json
+++ b/v3/WebPrograming2_Final-Project/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -25,6 +26,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "prettier": "^2.3.0",
