--- a/v3/WebPrograming2_Final-Project/package.json
+++ b/v3/WebPrograming2_Final-Project/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -28,6 +29,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "prettier": "^2.3.0",
