--- a/v3/WebPrograming2_Final-Project/package.json
+++ b/v3/WebPrograming2_Final-Project/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon src/test.js",
     "start": "nodemon src/app.js"
   },
   "keywords": [],
@@ -34,6 +34,7 @@
     "pg-hstore": "^2.3.3",
     "prettier": "^2.3.0",
     "request": "^2.88.2",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "twilio": "^3.65.0"
   }
 }
